# Agetic_ATS

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  init_databases.py  pyproject.toml  requirements.txt
.cursor/rules/: python-main-rule.mdc
atl/: __init__.py
atl/agents/: base.py  exec_agent.py  governance_agent.py  risk_agent.py  signal_agent_a.py  signal_agent_b.py
atl/graphs/: __init__.py  common.py  intraday_graph.py  swing_graph.py
atl/prompts/: data_sync_agent.md  explain_agent.md  governance.md  order_execution.md  react_intraday.md  react_swing.md  risk_management.md  system_monitoring.md
atl/tools/: execution.py  features.py  risk.py
configs/: __init__.py
docker/: __init__.py
docs/: ProjectOwerview.md  development_plan.md  project_development_plan.md  system_review.md
src/: __init__.py  config.py  main.py
src/api/: __init__.py  main.py
src/database/: __init__.py  graph_store.py  init_db.py  models.py  storage.py  vector_store.py
src/synchronizer/: __init__.py  sync_service.py
src/synchronizer/clients/: __init__.py  mt5_client.py
src/synchronizer/processors/: __init__.py  data_processor.py
src/synchronizer/services/: __init__.py  embedding_service.py
src/synchronizer/utils/: __init__.py  error_handler.py
storage/: __init__.py
storage/memgraph/: __init__.py  graph_store.py
storage/sqlite/: __init__.py  storage.py
tests/: __init__.py
tests/backtests/: __init__.py
tests/integration/: __init__.py  test_graphs.py  test_mt5_integration.py  test_sync.py
tests/unit/: __init__.py  test_models.py  test_sqlite_storage.py  test_vector_store.py
